update env file

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SECRET_KEY=qz%_ir)1khas+&5kdxs)09ie&=rg^87u$*g%$c&t_h7@oed)db
 ALLOWED_HOSTS=127.0.0.1,0.0.0.0, cops-iitbhu.herokuapp.com
-DEBUG=True
+DEBUG=False
 
